Added Swagger for some user, post routes
