# routes/api/v1/post.route.js
@@ -9,6 +9,6 @@ router.get("/get_posts", authMiddleware, postController.getPostsByUserId);
 router.get("/get_post/:postId", postController.getPostByPostId);
 router.post("/create_post", authMiddleware, postController.createPost);
 router.post("/update_post", authMiddleware, postController.updatePost);
-router.post("/delete_post", authMiddleware, postController.deletePost);
+router.delete("/delete_post", authMiddleware, postController.deletePost);
 
 module.exports = router;
